--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "camera-controls": "^2.2.1"
+    "camera-controls": "^2.2.1",
+    "hold-event": "^0.2.0",
+    "joystick-controller": "^1.0.8"
   }
 }
